--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "babel-polyfill": "^6.26.0",
     "echarts": "^4.2.1",
     "element-ui": "^2.12.0",
+    "mapbox-gl": "^1.5.0",
     "mockjs": "^1.0.1-beta3",
+    "moment": "^2.24.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.1"
