--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@mapbox/mapbox-gl-language": "^0.10.1",
     "axios": "^0.19.0",
     "babel-polyfill": "^6.26.0",
     "echarts": "^4.2.1",
@@ -22,6 +23,7 @@
     "moment": "^2.24.0",
     "ontology-ts-sdk": "^1.1.0",
     "vue": "^2.5.2",
+    "vue-i18n": "^8.15.3",
     "vue-loading-overlay": "^3.2.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.1"
